@@ -15,6 +15,7 @@ v1.0 - 2020-12-xx
 	- Reorganized config file and improved inline documentation within the file
 	- Plotting improvements:
 		- Show S/N ratio on trace plots
+		- Show spectral S/N ratio on spectrum plots
 
 
 v0.9 - 2020-04-24
